# tt-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
engine/: CMakeLists.txt  actor.h  actor_modifiers.h  actor_triggers.h  app.h  asset.h  asset_handler.h  button.h  clist.h  color.h  easing.h  finder.h  geometry.h  mtree.h  ptree.h  renderer2d.h  shape.h  shape2d.h  timeline.h  tte_main.cpp
engine/adapters/sdl2/: adapter.h  handler.h
engine/components/: animator_component.h  indexer_component.h  input_component.h  material_component.h  prefab_component.h  primitive_component.h  renderer2d_component.h  resource_component.h  shape_component.h  transform_component.h
engine/helpers/: actor_actions.h  actor_modifiers.h  actor_triggers.h
examples/: CMakeLists.txt  column1.cpp  column2.cpp  examplex.cpp  main.cpp  sdl_app.cpp  sdl_splash.cpp  showcase1.cpp  tutorial0.cpp  tutorial1.cpp  tutorial10.cpp  tutorial11.cpp  tutorial11_1.cpp  tutorial11_2.cpp  tutorial12.cpp  tutorial13.cpp  tutorial14.cpp  tutorial2.cpp  tutorial3.cpp  tutorial4.cpp  tutorial5.cpp  tutorial6.cpp  tutorial7.cpp  tutorial8.cpp  tutorial9.cpp
examples/asset/: config.json  tutorial1.json  tutorial6.json  tutorial8.anim  tutorial8.json
examples/asset/boot/: splash.anim.json  splash.json
examples/asset/sdl/: ingame.json  topmenu.json
examples/asset/sdl/ingame/: levelmap.json  p1.json
examples/asset/sdl/topmenu/: guide.json
examples/asset/showcase/: bg.json  chara0.anim  chara0.anim.json  chara0.json  chara1.anim  chara1.anim.json  chara1.json  chara2.anim  chara2.anim.json  chara2.json  chara3.anim  chara3.anim.json  chara3.json  dot32.json  grid0.json  grid1.json  hedgehog.json  ingame.json  menu.json  p1.json  player.anim  player.json  tilemap0.json  tilemap1.json
examples/asset/showcase/hud/: coins.json  (+3 more)
examples/asset/tutorial10/: chara.json  score.json  tutorial10.anim  tutorial10.anim.json  tutorial10.json
examples/asset/tutorial11/: falling.anim
examples/asset/tutorial13/: root.json  scene2.json  scene3.json
examples/asset/tutorial2/: status.json  tutorial2.json
examples/asset/tutorial3/: dialog.json
examples/asset/tutorial4/: tutorial4.json
examples/asset/tutorial6/: level_globals.json  player_globals.json
examples/asset/tutorial7/: tutorial7.json
examples/asset/tutorial9/: p1.json
(+15 files in other folders)
